# filestreamer

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
lib/libneat/: libneat.so.0
src/: file_reader.c  main.c  server_neat.c  server_sockets.c
src/include/: file_reader.h  server_neat.h  server_sockets.h
test/: CMakeLists.txt  mmap_test_input.txt  test_file_reader.cpp
